[build-system]
requires = [
    "setuptools >= 42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = ["test"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
  | .*venv*
)/
'''

[tool.pycln]
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
  | .*venv*
)/
'''

[tool.isort]
profile = "black"
filter_files = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
